Wrote three paragraphs and added photo to HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-<p>Todd R</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My Story</title>
+    </head>
+    <body>
+        <header>
+            <ul>
+                <li><a href="#Before1L">Before Law School</a></li>
+                <li><a href="#LawSchool">Law School</a></li>
+                <li><a href="#MOPA">Missouri Protection and Advocacy Services</a></li>
+            </ul>
+        </header>
+        <main>
+            <h3>The Journey I've Taken</h3>
+            <a name="Before1L"></a>
+            <h5>Before Law School</h5>
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Washington_University_in_St._Louis1.jpg/640px-Washington_University_in_St._Louis1.jpg" width="480" height="360">
+                <figcaption>A view from the quadrangle at Washington University in Saint Louis</figcaption>
+            </figure>
+            <p>In college at Wash U., after trying another program out, I transferred into the college of arts
+                and sciences and majored in mathematics (statistics track) and economics. 
+                After a year of graduate studies in economics and finance at SIUE, I worked for a year full time 
+                as a statistician at Market Scope, where I had worked for many years on an as-needed basis doing  
+                work that started with mailings. 
+                During this time, I also worked one day a week as a legal assistant. 
+                At a small law practice called Quality Liability Solutions, I was able to attend a 
+                worker's compensation hearing and participate in its settlement conference, do on-site 
+                for a landlord/tenant case, and participate in complicated business litigation in which I 
+                tagged emails for outgoing discovery, worked on drafting a fourth amended complaint, and 
+                used a spreadsheet to calculate a damages estimate based on estimates of lost revenue. 
+                As a result of all this, I became very interested in law. 
+                So, I went to law school. 
+            </p>
+            <a name="LawSchool"></a>
+            <h5>Law School</h5>
+            <article>
+                <h6>Saint Louis University School of Law</h6>
+                <p>Saint Louis University is a Jesuit University. Its law school, one of four in Missouri, 
+                    moved after the 2012-2013 school year from SLU's main campus to a 12-story building downtown
+                    that is across the street from the Circuit Court handling state law cases for the City of 
+                    Saint Louis.
+                </p>
+            </article> 
+            <p>During law school at Saint Louis University, unexpected personal circumstances beyond my control 
+                arose and forced me to take a reduced courseload of two courses my second semester. 
+                I ended up taking the second semester of legal writing later in my law school career than most 
+                of my classmates, but I was able to take two classes my first summer and the legal clinic my 
+                second summer and catch up to graduate on time. 
+                During the second summer, I handled an order of protection / guardian ad litem case from 
+                start to finish as a student attorney at the legal clinic, as well as handling client intake in 
+                landlord/tenant and creating a chonology based on hundreds of pages of medical records. 
+                While doing this, I also did an internship at Jackson Lewis law firm, during which time I 
+                wrote, under the supervision of the office's managing shareholder, an article on the 
+                implications of labor law on employer social media policies. 
+                I also worked 15-20 hours a week at HR Block during the winter of my third year of law school, 
+                providing guidance to tax professionals on the provisions of the Affordable Care Act for the 
+                first tax year that its main provisions were in effect. 
+                After graduating, I spent the remainder of 2015 studying for the bar exam, passing it on my 
+                attempt, and doing a contract review project for a contact I got in contact with in connection 
+                with Quality Liability Solutions.
+            </p>
+            <a name="MOPA"></a>
+            <h5>Missouri Protection and Advocacy Services</h5>
+            <p>
+                Once I got my license, I spent the entirety of 2016 working for Missouri Protection and Advocacy 
+                Services (MO P&#38;A). 
+                This job was, in some ways, two roles in one. 
+                I was a disability rights attorney and a systemic voting rights advocate. 
+                As a disability rights attorney, I worked extensively with adult guardianship, including 
+                involvement in drafting petitions for restoration of guardianship. 
+                I also worked with individuals with mental illnesses, including handling a case evaluating the 
+                suitability for unconditional release of an individual who had been found not guilty by reason 
+                of insanity and later given conditional release. 
+                I was required to acquire medical records for every case and bill time to grants. 
+                As a voting rights advocate, I met with voters and carried their concerns to county 
+                governments. 
+                I worked with a co-worker and with other disability rights organizations as central members of 
+                a roundtable centered around advancing disability voting access. 
+                For example, myself and two others organized an event with the Saint Louis County Board of 
+                elections, and with the help of other disability rights leaders, we were able to bring dozens 
+                of visually impaired voters to express their concerns to the Board's directors and receive a 
+                presentation from the County on how to use audio voting equipment. 
+                I also prepared and delivered voting rights presentations to a wide range of voters, including 
+                voters with developmental disorders, and worked with others to prepare packages for use in voter 
+                education in future years. 
+                In this position, I had the "guardianship spectrum" and the 14th Amendment on the wall in my 
+                office.
+            </p>
+        </main>
+        <footer>
+            <p>Posted by: Todd Romkema</p>
+        </footer> 
+    </body>
+</html>
