--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My Story</title>
+        <link href="styles.css", type="text/css", rel="stylesheet" /> 
     </head>
     <body>
         <header>
@@ -14,10 +15,10 @@
         <main>
             <h3>The Journey I've Taken</h3>
             <a name="Before1L"></a>
-            <h5>Before Law School</h5>
+            <h5 class="section">Before Law School</h5>
             <figure>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Washington_University_in_St._Louis1.jpg/640px-Washington_University_in_St._Louis1.jpg" width="480" height="360">
-                <figcaption>A view from the quadrangle at Washington University in Saint Louis</figcaption>
+                <figcaption id="photoCaption">A view from the quadrangle at Washington University in Saint Louis</figcaption>
             </figure>
             <p>In college at Wash U., after trying another program out, I transferred into the college of arts
                 and sciences and majored in mathematics (statistics track) and economics. 
@@ -34,7 +35,7 @@
                 So, I went to law school. 
             </p>
             <a name="LawSchool"></a>
-            <h5>Law School</h5>
+            <h5 class="section">Law School</h5>
             <article>
                 <h6>Saint Louis University School of Law</h6>
                 <p>Saint Louis University is a Jesuit University. Its law school, one of four in Missouri, 
@@ -62,7 +63,7 @@
                 with Quality Liability Solutions.
             </p>
             <a name="MOPA"></a>
-            <h5>Missouri Protection and Advocacy Services</h5>
+            <h5 class="section">Missouri Protection and Advocacy Services</h5>
             <p>
                 Once I got my license, I spent the entirety of 2016 working for Missouri Protection and Advocacy 
                 Services (MO P&#38;A). 
